Changelog
=========


1.1.1 (unreleased)
------------------

- Nothing changed yet.


1.1.0 (2016-04-11)
------------------

- Add empty alt attributes to img tags. [jone]

- Fix http-equiv="X-UA-Compatible" header.
  [mathias.leimgruber]

- Remove duplicate accesskey 1 on portal-logo.
  [mathias.leimgruber]

- Add a hidden h2 to the logo markup. Without this separation the logo belongs
  semantically to the service navigation. This confuses users with screenreaders.
  [mathias.leimgruber]

- Extend menues/mobile scss by header/section tags to support menues without definition lists.
  [mathias.leimgruber]

- Wrap Paragraph-Tag arround text in div with documentDescription css class.
  [mathias.leimgruber]


1.0.0a4 (2015-12-09)
--------------------

- Fix image display with for form image widget.
  [mathias.leimgruber]


1.0.0a3 (2015-12-08)
--------------------

- Fix print issues with deco grid and simplelayout.
  IE printed only the first page, Safari did not use the print css at all.
  [Kevin, mathias.leimgruber]


1.0.0a2 (2015-12-07)
--------------------

- Fix mobilenavigation fixed navigation elements
  [elioschmutz]


1.0.0a1 (2015-12-04)
--------------------

- Initial implementation
  [jone]